replace EdadAsegurado by FechaNacimientoAsegurado in contract table

--- a/frontend/src/translations/es.json
+++ b/frontend/src/translations/es.json
@@ -152,5 +152,6 @@
     "InsuranceDNI": "DNI del asegurado",
     "CCC": "CCC",
     "RequestCode": "Código de solicitud",
-    "PolicyCode": "Código de póliza"
+    "PolicyCode": "Código de póliza",
+    "InsuranceBirthDate": "Fecha de nacimiento del asegurado"
 }
