upload digital signature and fixes

--- a/frontend/src/translations/es.json
+++ b/frontend/src/translations/es.json
@@ -176,5 +176,6 @@
     "typeConciliations": "Tipo de conciliaciones",
     "addTypeConciliation": "Añadir tipo de conciliación",
     "editTypeConciliation": "Editar tipo de conciliación",
-    "createTypeConciliation": "Crear tipo de conciliación"
+    "createTypeConciliation": "Crear tipo de conciliación",
+    "uploadDigitalSignatureFile": "Fichero de firma digital"
 }
